# lib/db/src/schema/index.ts
@@ -2,3 +2,8 @@ export * from "./system_logs";
 export * from "./user_analytics";
 export * from "./system_configs";
 export * from "./api_keys";
+export * from "./projects";
+export * from "./project_metrics";
+export * from "./project_events";
+export * from "./ai_conversations";
+export * from "./website_visits";
